<resources>
    <string name="app_name">Online Courses</string>
    <string name="todo">todo</string>
    <string name="online_course">Online Course</string>
    <string name="see_all">See All</string>
    <string name="search_for_courses">Search for courses</string>
    <string name="find_a_course_you_want_to_learn">Find a course you want to learn</string>
    <string name="hey_rajendra">Hey Rajendra,</string>
    <string name="categories">Categories</string>
    <string name="course_content">Course Content</string>
    <string name="buy_now">Buy Now</string>
    <string name="ux_design">Ux Design</string>
    <string name="_17k">17k</string>
    <string name="_50">50</string>
    <string name="_4_2">4.2</string>
    <string name="_01">01</string>
    <string name="_5_35_mins">5.35 mins</string>
    <string name="welcome_to_the_course">Welcome to the course</string>
    <string name="courses">Courses</string>
    <string name="_17">17</string>
    <string name="marketing">Marketing</string>
</resources>